first push of all files

--- a/index.html
+++ b/index.html
@@ -3,27 +3,41 @@
 		<head>
 		<meta charset="utf-8">
 		<title>Emily Plummer</title>
+		<link rel="stylesheet" href="font-awesome-4.2.0/css/font-awesome.min.css">
+		<link href='http://fonts.googleapis.com/css?family=Merriweather+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 <body>
 	<div id="container">
 	<div id="header">
-		<ul id="nav">
-			<li><a href="#about-me">About</a></li>
-			<li><a href="#work">Work</a></li>
-			<li><a href="#contact">Contact Me!</a></li>
+		<img id="me-photo" src="me.png">
+		<ul id="nav-left" class="fa-ul">
+			<li><a href="#my-story"><i class="fa-li fa fa-bolt"></i>My Story</a></li>
+			<li><a href="#web-dev"><i class="fa-li fa fa-code"></i>Web Development</a></li>
+			<li><a href="#marketing"><i class="fa-li fa fa-area-chart"></i>Marketing Experience</a></li>
+		</ul>
+		<ul id="nav-right" class="fa-ul">
+			<li><a href="values"><i class="fa-li fa fa-smile-o"></i>Values</a></li>
+			<li><a href="blog.html"><i class="fa-li fa fa-pencil-square-o"></i>Blog</a></li>
+			<li><a href="contact"><i class="fa-li fa fa-comment-o"></i>Contact</a></li>
 		</ul>
 	</div><!-- end header-->
-	<div id="about-me">
-		<p>About me</p>
+	<div id="my-story" class="odd">
+		<h1 class="headline">My Story</h1>
 	</div>
 
-	<div id="work">
-		<p>stuff</p>
+	<div id="web-dev" class="even">
+		<h1 class="headline">Web Development</h1>
 	</div>
 
-	<div id="contact">
-		<p>Contact Me</p>
+	<div id="marketing" class="odd">
+		<h1 class="headline">Marketing Experience</h1>
+	</div>
+	<div id="values" class="even">
+		<h1 class="headline">Values</h1>
+	</div>
+	<div id="contact" class="odd">
+		<h1 class="headline">Contact</h1>
 	</div>
 
 	<footer>
