- changed backgrounds, added content

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<div id="container">
 	<div id="header">
 		<img id="logo" src="logo-image.png">
-		<img id="me-photo" src="me.png">
+		<!--<img id="me-photo" src="me.png">-->
 		<ul id="nav-left" class="fa-ul">
 			<li><a href="#my-story"><i class="fa-li fa fa-bolt"></i>My Story</a></li>
 			<li><a href="#web-dev"><i class="fa-li fa fa-code"></i>Web Development</a></li>
@@ -22,52 +22,74 @@
 			<li><a href="blog.html"><i class="fa-li fa fa-pencil-square-o"></i>Blog</a></li>
 			<li><a href="contact"><i class="fa-li fa fa-comment-o"></i>Contact</a></li>
 		</ul>
+		<div id="arrow-div">
+		<img id="arrow" src="vec_down_arrow.png">
+	</div>
 	</div><!-- end header-->
 	<div id="my-story" class="odd">
 		<h1 class="headline">My Story</h1>
-		<div class="col-1"><p>stuff</p>
-		</div>
-		<div class="col-2">
-			<h2>Read More...</h2>
-			<ul class="blog-list">
-			<li><a href="#">Blog Post 1</a></li>
-			<li><a href="#">Blog Post 2</a></li>
-		</ul>
+		<div class="story"><p>I am a 4th year Cal Poly student graduating in December 2014 with a degree in Business Adminstration, concentrating in Marketing. In my free time, I've taught myself how to do front end web development and am currently focused on developing my skills in that area.</p>
 		</div>
 	</div>
 
 	<div id="web-dev" class="even">
 		<h1 class="headline">Web Development</h1>
-		<div class="col-1"><p>stuff</p>
-		</div>
-		<div class="col-2">
-			<h2>Read More...</h2>
-			<ul class="blog-list">
-			<li><a href="#">Blog Post 1</a></li>
-			<li><a href="#">Blog Post 2</a></li>
+		<div class="col-1">
+			<h2 class="sub-headline">Skills</h2>
+			<ul>
+				<li>Creating beautiful markup in HTML5 & CSS3</li>
+				<li>Experience with Git & SVN</li>
+				<li>Experience using CMS systems.</li>
+				<li>Currently learning Javascript through Codeschool and practice projects.</li>
+				<li>Beginner knowledge of Java.</li>
+			</il>
 		</ul>
+		</div>
+			<div id="experience" class="sub-headline">
+			<h2 class="sub-headline">Experience</h2>
+			<p >Experts Exchange</p>
+			<p id="date">September 2014 - Present</p>
+			<p>Front End Developer Intern</p>
 		</div>
 	</div>
 
 	<div id="marketing" class="odd">
 		<h1 class="headline">Marketing Experience</h1>
-		<div class="col-1"><p>stuff</p>
+		<div class="col-1"><p>I am concentrating in Marketing at Cal Poly San Luis Obispo. I also have 2+ years of marketing work experience.</p>
 		</div>
-		<div class="col-2">
+		<div id="experience">
+			<h2 class="sub-headline">Experience</h2>
+			<p>Shopatron</p>
+			<p>August 2013 - April 2014</p>
+			<p>Online Marketing Associate</p>
+			<ul>
+				<li>Managed several large brands’ online presence to drive traffic & sales to online store while building brand awareness using data driven techniques.</li>
+				<li>Made technical SEO fixes such as meta data optimization, UX optimization, and implementing internal linking structures.</li>
+				<li>Performed SEO & Brand Audits for clients.</li>
+				<li>Restructured and refined a $20,000/day budget campaign in Google AdWords.</li>
+				<li>Built custom reports using Google Analytics</li>
+			</ul>
+		</div>
+		<!--<div class="col-2">
 			<h2>Read More...</h2>
 			<ul class="blog-list">
 			<li><a href="#">Blog Post 1</a></li>
 			<li><a href="#">Blog Post 2</a></li>
 		</ul>
-		</div>
+		</div>-->
 	</div>
 	<div id="values" class="even">
 		<h1 class="headline">Values</h1>
 	</div>
 	<div id="contact" class="odd">
 		<h1 class="headline">Contact</h1>
+		<ul class="fa-ul contact">
+		
+		<li><i class="fa-li fa fa-envelope"></i>eplummer26@gmail.com</li>
+		<li><i class="fa-li fa fa-twitter"></i>@eplummer26</li>
+		<li><i class="fa-li fa fa-linkedin"></i>www.linkedin.com/in/eplummer26/</li>
 	</div>
-
+		</ul>
 	<footer>
 		<p>Emily Plummer Copyright 2014</p>
 	</footer>
