changed link colors, formatted contact section

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 			</il>
 		</ul>
 		</div>
-			<div id="experience" class="sub-headline">
+			<div id="experience">
 			<h2 class="sub-headline">Experience</h2>
-			<p >Experts Exchange</p>
+			<p>Experts Exchange</p>
 			<p id="date">September 2014 - Present</p>
 			<p>Front End Developer Intern</p>
 		</div>
@@ -86,8 +86,8 @@
 		<ul class="fa-ul contact">
 		
 		<li><i class="fa-li fa fa-envelope"></i>eplummer26@gmail.com</li>
-		<li><i class="fa-li fa fa-twitter"></i>@eplummer26</li>
-		<li><i class="fa-li fa fa-linkedin"></i>www.linkedin.com/in/eplummer26/</li>
+		<li><i class="fa-li fa fa-twitter"></i><a href="twitter.com/eplummer26">@eplummer26</a></li>
+		<li><i class="fa-li fa fa-linkedin"></i><a href="www.linkedin.com/in/eplummer26">www.linkedin.com/in/eplummer26</a></li>
 	</div>
 		</ul>
 	<footer>
