--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
 		<link rel="stylesheet" href="font-awesome-4.2.0/css/font-awesome.min.css">
 		<link href='http://fonts.googleapis.com/css?family=Merriweather+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" href="stylesheet.css" type="text/css" charset="utf-8" />
 	</head>
 <body>
 	<div id="container">
 	<div id="header">
-		<img id="logo" src="logo-image.png">
+		<p id="name">Emily Plummer</p>
 		<!--<img id="me-photo" src="me.png">-->
 		<ul id="nav-left" class="fa-ul">
 			<li><a href="#my-story"><i class="fa-li fa fa-bolt"></i>My Story</a></li>
@@ -19,7 +20,7 @@
 		</ul>
 		<ul id="nav-right" class="fa-ul">
 			<li><a href="values"><i class="fa-li fa fa-smile-o"></i>Values</a></li>
-			<li><a href="blog.html"><i class="fa-li fa fa-pencil-square-o"></i>Blog</a></li>
+			<li><a href="resume1.pdf"><i class="fa-li fa fa-pencil-square-o"></i>Resume</a></li>
 			<li><a href="contact"><i class="fa-li fa fa-comment-o"></i>Contact</a></li>
 		</ul>
 		<div id="arrow-div">
@@ -39,7 +40,7 @@
 			<ul>
 				<li>Creating beautiful markup in HTML5 & CSS3</li>
 				<li>Experience with Git & SVN</li>
-				<li>Experience using CMS systems.</li>
+				<li>Experience developing within a CMS.</li>
 				<li>Currently learning Javascript through Codeschool and practice projects.</li>
 				<li>Beginner knowledge of Java.</li>
 			</il>
@@ -47,27 +48,43 @@
 		</div>
 			<div id="experience">
 			<h2 class="sub-headline">Experience</h2>
-			<p>Experts Exchange</p>
-			<p id="date">September 2014 - Present</p>
+			<p><strong>Experts Exchange</strong></p>
+			<p class="date">September 2014 - Present</p>
 			<p>Front End Developer Intern</p>
+			<ul class="experience-work">
+				<li>Develop and edit pages through internally created CMS.</li>
+				<li>Fix bugs.</li>
+				<li>Create landing pages and email templates in Marketo.</li>
+			</ul>
+
 		</div>
 	</div>
 
 	<div id="marketing" class="odd">
 		<h1 class="headline">Marketing Experience</h1>
-		<div class="col-1"><p>I am concentrating in Marketing at Cal Poly San Luis Obispo. I also have 2+ years of marketing work experience.</p>
-		</div>
-		<div id="experience">
-			<h2 class="sub-headline">Experience</h2>
-			<p>Shopatron</p>
-			<p>August 2013 - April 2014</p>
-			<p>Online Marketing Associate</p>
-			<ul>
+		<p id="marketing-exp">I am concentrating in Marketing at Cal Poly San Luis Obispo. I also have 2+ years of marketing work experience.</p>
+		<div class="col-1">
+			<p><strong>Barker Creek Publishing</strong></p>
+			<p class="date">April 2010 - August 2014 (intermittent summers)</p>
+			<p>Marketing Representative</p>
+			<ul class="experience-work">
 				<li>Managed several large brands’ online presence to drive traffic & sales to online store while building brand awareness using data driven techniques.</li>
 				<li>Made technical SEO fixes such as meta data optimization, UX optimization, and implementing internal linking structures.</li>
 				<li>Performed SEO & Brand Audits for clients.</li>
 				<li>Restructured and refined a $20,000/day budget campaign in Google AdWords.</li>
 				<li>Built custom reports using Google Analytics</li>
+			</ul>
+		</div>
+		<div id="experience">
+			<p><strong>Shopatron</strong></p>
+			<p class="date">August 2013 - April 2014</p>
+			<p>Online Marketing Associate</p>
+			<ul class="experience-work">
+				<li>Developed and styled <a href="http://stores.ebay.com/barkercreekpublishing/">custom eBay store.</a></li>
+				<li>Managed multiple eCommerce channels (Online Store, Amazon, eBay)</li>
+				<li>Organized online marketing campaigns through the use of blogs, email, PPC, and social media.</li>
+				<li>Analyzed site health using Google Analytics and Google Webmaster Tools.</li>
+				<li>Trained employees to continue marketing efforts during the school year.</li>
 			</ul>
 		</div>
 		<!--<div class="col-2">
@@ -80,17 +97,29 @@
 	</div>
 	<div id="values" class="even">
 		<h1 class="headline">Values</h1>
+		<div class="col-1">
+		<ul>
+			<li>Integrity: Doing the right thing, in any circumstance, whether or not someone is watching.</li>
+			<li>Quality of Work: Creating work to be proud of, not taking shortcuts.</li>
+		</ul>
+	</div>
+	<div id="values-2">
+		<ul>
+			<li>Communication: Doing my best to communicate with others effectively. This also means taking the time to listen to the thoughts and ideas of my co-workers.</li>
+			<li>Empathy: Actively trying to recognize and understand the thoughts, ideas, and feelings of those around me.</li>
+			</ul>
+		</div>
 	</div>
 	<div id="contact" class="odd">
 		<h1 class="headline">Contact</h1>
 		<ul class="fa-ul contact">
 		
-		<li><i class="fa-li fa fa-envelope"></i>eplummer26@gmail.com</li>
+		<li><i class="fa-li fa fa-envelope"></i><a href="mailto:eplummer26@gmail.com" target="_top">eplummer26@gmail.com</a></li>
 		<li><i class="fa-li fa fa-twitter"></i><a href="twitter.com/eplummer26">@eplummer26</a></li>
 		<li><i class="fa-li fa fa-linkedin"></i><a href="www.linkedin.com/in/eplummer26">www.linkedin.com/in/eplummer26</a></li>
 	</div>
 		</ul>
 	<footer>
-		<p>Emily Plummer Copyright 2014</p>
+		<p>Emily Plummer &copy; 2014</p>
 	</footer>
 </div> <!--- end container----> 
