fixed values link

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<li><a href="#marketing"><i class="fa-li fa fa-area-chart"></i>Marketing Experience</a></li>
 		</ul>
 		<ul id="nav-right" class="fa-ul">
-			<li><a href="values"><i class="fa-li fa fa-smile-o"></i>Values</a></li>
+			<li><a href="#values"><i class="fa-li fa fa-smile-o"></i>Values</a></li>
 			<li><a href="resume1.pdf"><i class="fa-li fa fa-pencil-square-o"></i>Resume</a></li>
 			<li><a href="contact"><i class="fa-li fa fa-comment-o"></i>Contact</a></li>
 		</ul>
