--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<link href='http://fonts.googleapis.com/css?family=Merriweather+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="stylesheet" href="stylesheet.css" type="text/css" charset="utf-8" />
+		<link rel="shortcut icon" type="image/png" href="favicon.png"/>
 	</head>
 <body>
 	<div id="container">
