--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			<h2 class="sub-headline">Experience</h2>
 			<p><strong>Experts Exchange</strong></p>
 			<p class="date">September 2014 - Present</p>
-			<p>Front End Developer Intern</p>
+			<p class="sub-sub-headline">Front End Developer Intern</p>
 			<ul class="experience-work">
 				<li>Develop and edit pages through internally created CMS.</li>
 				<li>Fix bugs.</li>
@@ -67,7 +67,7 @@
 		<div class="col-1">
 			<p><strong>Barker Creek Publishing</strong></p>
 			<p class="date">April 2010 - August 2014 (intermittent summers)</p>
-			<p>Marketing Representative</p>
+			<p class="sub-sub-headline">Marketing Representative</p>
 			<ul class="experience-work">
 				<li>Managed several large brands’ online presence to drive traffic & sales to online store while building brand awareness using data driven techniques.</li>
 				<li>Made technical SEO fixes such as meta data optimization, UX optimization, and implementing internal linking structures.</li>
@@ -79,7 +79,7 @@
 		<div id="experience">
 			<p><strong>Shopatron</strong></p>
 			<p class="date">August 2013 - April 2014</p>
-			<p>Online Marketing Associate</p>
+			<p class="sub-sub-headline">Online Marketing Associate</p>
 			<ul class="experience-work">
 				<li>Developed and styled <a href="http://stores.ebay.com/barkercreekpublishing/">custom eBay store.</a></li>
 				<li>Managed multiple eCommerce channels (Online Store, Amazon, eBay)</li>
