--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<li><a href="#contact"><i class="fa-li fa fa-comment-o"></i>Contact</a></li>
 		</ul>
 		<div id="arrow-div">
-		<img id="arrow" src="vec_down_arrow.png">
+		<a href="#my-story"><img id="arrow" src="vec_down_arrow.png"></a>
 	</div>
 	</div><!-- end header-->
 	<div id="my-story" class="odd">
