--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
   ga('create', 'UA-55480065-1', 'auto');
   ga('send', 'pageview');
+  _gaq.push(['_setDomainName','github.io']);
 
 </script>
 	</head>
