trying to fix link

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ $(document).ready(function() {
 		<p id="name">Emily Plummer</p>
 		<!--<img id="me-photo" src="me.png">-->
 		<ul id="nav-left" class="fa-ul">
-			<li><a href="#headline-story"><i class="fa-li fa fa-bolt"></i>My Story</a></li>
+			<li><a href="#link"><i class="fa-li fa fa-bolt"></i>My Story</a></li>
 			<li><a href="#web-dev"><i class="fa-li fa fa-code"></i>Web Development</a></li>
 			<li><a href="#marketing"><i class="fa-li fa fa-area-chart"></i>Marketing Experience</a></li>
 		</ul>
@@ -69,7 +69,7 @@ $(document).ready(function() {
 	</div>
 	</div><!-- end header-->
 	<div id="my-story" class="odd">
-		<h1 class="headline" id="headline-story">My Story</h1>
+		<h1 class="headline" id="link">My Story</h1>
 		<div class="copy"><p>I am a 4th year Cal Poly student graduating in December 2014 with a degree in Business Adminstration, concentrating in Marketing. In my free time, I've taught myself how to do front end web development and am currently focused on developing my skills in that area.</p>
 		</div>
 	</div>
