--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ $(document).ready(function() {
 		<p id="name">Emily Plummer</p>
 		<!--<img id="me-photo" src="me.png">-->
 		<ul id="nav-left" class="fa-ul">
-			<li><a href="#link"><i class="fa-li fa fa-bolt"></i>My Story</a></li>
+			<li><a href="#my-story"><i class="fa-li fa fa-bolt"></i>My Story</a></li>
 			<li><a href="#web-dev"><i class="fa-li fa fa-code"></i>Web Development</a></li>
 			<li><a href="#marketing"><i class="fa-li fa fa-area-chart"></i>Marketing Experience</a></li>
 		</ul>
