took transition out -_______-

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   _gaq.push(['_setDomainName','github.io']);
 
 </script>
-<script>
+<!--<script>
 $(document).ready(function() {
   function filterPath(string) {
   return string
@@ -47,7 +47,7 @@ $(document).ready(function() {
     }
   });
 });
-</script>
+</script>-->
 	</head>
 <body>
 	<div id="container">
