--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
   ga('create', 'UA-55480065-1', 'auto');
+  ga('require', 'displayfeatures');
   ga('send', 'pageview');
   _gaq.push(['_setDomainName','github.io']);
 
