--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ $(function() {
 		</ul>
 		<ul id="nav-right" class="fa-ul">
 			<li><a href="#values"><i class="fa-li fa fa-smile-o"></i>Values</a></li>
-			<li><a href="resume1.pdf"><i class="fa-li fa fa-pencil-square-o"></i>Resume</a></li>
+			<li><a href="blog.html"><i class="fa-li fa fa-pencil-square-o"></i>Blog</a></li>
 			<li><a href="#contact"><i class="fa-li fa fa-comment-o"></i>Contact</a></li>
 		</ul>
 		<div id="arrow-div">
