--- a/closures.html
+++ b/closures.html
@@ -87,7 +87,10 @@ multiplier is now assigned a value of 6, so mystery2 can be evaluated.</p>
 <p> This evaluates to 122!</p>
 </p>
 
-
+<footer>
+		<p>Emily Plummer &copy; 2014</p>
+	</footer>
 </div>
+
 	</body>
 	</html>
