--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@ $(function() {
 			<ul class="experience-work">
 				<li>Develop and edit pages through internally created CMS.</li>
 				<li>Fix bugs.</li>
+<li>Audit site for responsive issues.</li>
 				<li>Create landing pages and email templates in Marketo.</li>
 			</ul>
 
