--- a/index.html
+++ b/index.html
@@ -44,12 +44,13 @@ $(function() {
 		<p id="name">Emily Plummer</p>
 		<!--<img id="me-photo" src="me.png">-->
 		<ul id="nav-left" class="fa-ul">
-			<li><a href="#my-story"><i class="fa-li fa fa-bolt"></i>My Story</a></li>
 			<li><a href="#web-dev"><i class="fa-li fa fa-code"></i>Web Development</a></li>
 			<li><a href="#marketing"><i class="fa-li fa fa-area-chart"></i>Marketing Experience</a></li>
+			<li><a href="#values"><i class="fa-li fa fa-smile-o"></i>Values</a></li>
 		</ul>
 		<ul id="nav-right" class="fa-ul">
-			<li><a href="#values"><i class="fa-li fa fa-smile-o"></i>Values</a></li>
+			
+			<li><a href="resume.pdf"><i class="fa-li fa fa-bolt"></i>Resume</a></li>
 			<li><a href="blog.html"><i class="fa-li fa fa-pencil-square-o"></i>Blog</a></li>
 			<li><a href="#contact"><i class="fa-li fa fa-comment-o"></i>Contact</a></li>
 		</ul>
