--- a/ruby-rails-the-moment.html
+++ b/ruby-rails-the-moment.html
@@ -31,7 +31,7 @@
  <p>MARCH?! This was in September! We were supposed to just type away at things and be OKAY with not knowing what the hell we were doing until MARCH?!! But Pevo explained how magical the moment would be when everything connected. The moment when all the peices come together and you kind of get what you are doing. I thought this was crazy. But I just shut up and waited for *the moment*.</p>
 
 
-<p>*the moment*</p>
+<h2>The Moment</h2>
 
 <p>Somewhere between January and February, the moment happened. I can't remember exactly what I was working on at the time, but the moment was clear. It was happening. I was finally <strong><i>getting it</i></strong>. I think if you've ever given any type of coding a try you know exactly what I'm talking about. For me, this is what programming is <strong>all about.</strong> This is why I am pursuing a career in web development. It's why I spend countless hours on the weekend learning and learning and learning some more. This moment is really magic. It's exciting, motivating, and all together <strong>empowering</strong>. </p>
 
