--- a/ruby-rails-the-moment.html
+++ b/ruby-rails-the-moment.html
@@ -7,6 +7,18 @@
 		<link href='http://fonts.googleapis.com/css?family=Merriweather+Sans' rel='stylesheet' type='text/css'>
 		<script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js?lang=css&skin=sunburst"></script>
 		<link rel="stylesheet" type="text/css" href="blog.css">
+				<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-55480065-1', 'auto');
+  ga('require', 'displayfeatures');
+  ga('send', 'pageview');
+  _gaq.push(['_setDomainName','github.io']);
+
+</script>
 	</head>
 <body>
 	<div id="container">
