--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ $(function() {
 				<li>Experience with Git & SVN</li>
 				<li>Experience developing within a CMS.</li>
 				<li>Currently learning Javascript through Codeschool and practice projects.</li>
-				<li>Beginner knowledge of Java.</li>
+				<li>Beginner knowledge of Java and Ruby.</li>
 			</il>
 		</ul>
 		</div>
@@ -86,6 +86,8 @@ $(function() {
 				<li>Develop and edit pages through internally created CMS.</li>
 				<li>Fix bugs.</li>
 <li>Audit site for responsive issues.</li>
+<li>Develop site wide experiences to aid in conversion.</li>
+<li>Create experiments in Optimizely</li>
 				<li>Create landing pages and email templates in Marketo.</li>
 			</ul>
 
