coloring on lnks

--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@ $(function() {
 		<ul class="fa-ul contact">
 		
 		<li><i class="fa-li fa fa-envelope"></i><a href="mailto:eplummer26@gmail.com" target="_top">eplummer26@gmail.com</a></li>
-		<li><i class="fa-li fa fa-twitter"></i><a href="http://www.twitter.com/eplummer26">@eplummer26</a></li>
-		<li><i class="fa-li fa fa-linkedin"></i><a href="http://www.linkedin.com/in/eplummer26">www.linkedin.com/in/eplummer26</a></li>
+		<li><i class="fa-li fa fa-twitter"></i><a href="http://www.twitter.com/eplummer26" class="bottom-links">@eplummer26</a></li>
+		<li><i class="fa-li fa fa-linkedin"></i><a href="http://www.linkedin.com/in/eplummer26" class="bottom-links">www.linkedin.com/in/eplummer26</a></li>
 	</div>
 		</ul>
 	<footer>
