edited home page

--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@ $(function() {
 		<div class="col-1">
 			<h2 class="sub-headline">Skills</h2>
 			<ul>
-				<li>Creating beautiful markup in HTML5 & CSS3</li>
+				<li>Mastery of HTML5 & CSS3</li>
 				<li>Experience with Git & SVN</li>
 				<li>Experience developing within a CMS.</li>
-				<li>Currently learning Javascript through Codeschool and practice projects.</li>
+				<li>Currently learning Javascript & jQuery through Codeschool and practice projects.</li>
 				<li>Beginner knowledge of Java and Ruby.</li>
 			</il>
 		</ul>
