--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@ $(function() {
 				<li>Experience developing within a CMS.</li>
 				<li>Currently learning Javascript & jQuery through Codeschool and practice projects.</li>
 				<li>Beginner knowledge of Java and Ruby.</li>
+				<li>Experience contributing to an Open Source project.</li>
 			</il>
 		</ul>
 		</div>
