--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@ $(function() {
 			<ul>
 				<li>Mastery of HTML5 & CSS3</li>
 				<li>Experience with Git & SVN</li>
-				<li>Experience developing within a CMS.</li>
+				<li>Experience developing within a CMS</li>
 				<li>Currently learning Javascript & jQuery through Codeschool and practice projects.</li>
-				<li>Beginner knowledge of Java and Ruby.</li>
-				<li>Experience contributing to an Open Source project.</li>
+				<li>Beginner knowledge of Java and Ruby</li>
+				<li>Experience contributing to an Open Source project</li>
 			</il>
 		</ul>
 		</div>
@@ -84,12 +84,12 @@ $(function() {
 			<p class="date">September 2014 - Present</p>
 			<p class="sub-sub-headline">Front End Developer Intern</p>
 			<ul class="experience-work">
-				<li>Develop and edit pages through internally created CMS.</li>
-				<li>Fix bugs.</li>
-<li>Audit site for responsive issues.</li>
-<li>Develop site wide experiences to aid in conversion.</li>
+				<li>Develop and edit pages through internally created CMS</li>
+				<li>Fix bugs</li>
+<li>Audit site for responsive issues</li>
+<li>Develop site wide experiences to aid in conversion</li>
 <li>Create experiments in Optimizely</li>
-				<li>Create landing pages and email templates in Marketo.</li>
+				<li>Create landing pages and email templates in Marketo</li>
 			</ul>
 
 		</div>
@@ -103,10 +103,10 @@ $(function() {
 			<p class="date">April 2010 - August 2014 (intermittent summers)</p>
 			<p class="sub-sub-headline">Marketing Representative</p>
 			<ul class="experience-work">
-				<li>Managed several large brands’ online presence to drive traffic & sales to online store while building brand awareness using data driven techniques.</li>
-				<li>Made technical SEO fixes such as meta data optimization, UX optimization, and implementing internal linking structures.</li>
-				<li>Performed SEO & Brand Audits for clients.</li>
-				<li>Restructured and refined a $20,000/day budget campaign in Google AdWords.</li>
+				<li>Managed several large brands’ online presence to drive traffic & sales to online store while building brand awareness using data driven techniques</li>
+				<li>Made technical SEO fixes such as meta data optimization, UX optimization, and implementing internal linking structures</li>
+				<li>Performed SEO & Brand Audits for clients</li>
+				<li>Restructured and refined a $20,000/day budget campaign in Google AdWords</li>
 				<li>Built custom reports using Google Analytics</li>
 			</ul>
 		</div>
@@ -115,11 +115,11 @@ $(function() {
 			<p class="date">August 2013 - April 2014</p>
 			<p class="sub-sub-headline">Online Marketing Associate</p>
 			<ul class="experience-work">
-				<li>Developed and styled <a href="http://stores.ebay.com/barkercreekpublishing/">custom eBay store.</a></li>
+				<li>Developed and styled <a href="http://stores.ebay.com/barkercreekpublishing/">custom eBay store</a></li>
 				<li>Managed multiple eCommerce channels (Online Store, Amazon, eBay)</li>
-				<li>Organized online marketing campaigns through the use of blogs, email, PPC, and social media.</li>
-				<li>Analyzed site health using Google Analytics and Google Webmaster Tools.</li>
-				<li>Trained employees to continue marketing efforts during the school year.</li>
+				<li>Organized online marketing campaigns through the use of blogs, email, PPC, and social media</li>
+				<li>Analyzed site health using Google Analytics and Google Webmaster Tools</li>
+				<li>Trained employees to continue marketing efforts during the school year</li>
 			</ul>
 		</div>
 		<!--<div class="col-2">
