--- a/dropbox_test/dropbox.html
+++ b/dropbox_test/dropbox.html
@@ -30,20 +30,20 @@
 				</ul>
 			</nav>
 
-			<!--<nav class="mobile">
-				<ul>
-					<li><img src="assets/white_dropbox_glyph@2x.png"></li>
-					<li><a href="#">Business Home</a></li>
-					<li><a href="#">Overview</a></li>
-					<li><a href="#">Uses</a></li>
-					<li><a href="#">Resources</a></li>
-					<li><a href="#">Customers</a></li>
-					<li><a href="#">Pricing</a></li>
-					<li><a href="#">Contact</a></li>
-				</ul>
-			</nav>-->
 		<div class="layer">
 		</div>
+
+		<div class="mobile-menu">
+		<ul class="dropdown">
+			<li><a href="#">Overview</a></li>
+			<li><a href="#">Uses</a></li>
+			<li><a href="#">Resources</a></li>
+			<li><a href="#">Customers</a></li>
+			<li><a href="#">Pricing</a></li>
+			<li><a href="#">Contact</a></li>
+		</ul>
+</div>
+
 	</section>
 
 	<section id="why-dropbox">
@@ -68,13 +68,13 @@
 	<section id="what-can-dropbox">
 	<h2>What can Dropbox for Business do for your team?</h2>
 
-	<img src="assets/arrow-left.png" id="control-left">
+	<img src="assets/arrow-left.png" class='navButton' id="control-left">
   <ul id="slider">
     <li><img id="slider-img" src="assets/BCBG.jpg"></li>
     <li><img id="slider-img" src="assets/centric.jpg"></li>
     <li><img id="slider-img" src="assets/asana.jpg"></li>
   </ul>
- <img src="assets/arrow-right.png" id="control-right">
+ <img src="assets/arrow-right.png" class='navButton' id="control-right">
 
   <ul id="dots">   
     <li></li>
@@ -96,7 +96,6 @@
 	<section id="dropbox-video">
 	<h2>Work together simply with Dropbox for Business</h2>
 	<video src="assets/video_dfb_small.mov" controls poster="assets/video-still.jpg" class="videoPlayer"></video>
-	<!--<img src="assets/video-still.jpg" class="still">-->
 	<img src="assets/player_large.png" class="play">
 	</section>
 	<section id="get-your-team">
@@ -141,7 +140,9 @@
 	  <li><a href="#">Youtube</a></li>
 	  <li><a href="#">Blogs</a></li>
 	</ul>
-	</footer>
+</footer>
 
 </body>
+
+</html>
 
