--- a/dropbox_test/dropbox.html
+++ b/dropbox_test/dropbox.html
@@ -15,7 +15,7 @@
 				<p id="copy">Dropbox for Business lets your team collaborate on important projects anywhere, while keeping IT in control.</p>
 				<a href="#" class="button">Try it free</a>
 				<p>or</p>
-				<p id="last"> buy for $15 / user / month</p>
+				<p id="last"><a href="#"> buy for $15 / user / month</a></p>
 			</div>
 			<nav class="desktop">
 				<ul>
@@ -30,9 +30,6 @@
 				</ul>
 			</nav>
 
-		<div class="layer">
-		</div>
-
 		<div class="mobile-menu">
 		<ul class="dropdown">
 			<li><a href="#">Overview</a></li>
@@ -43,6 +40,8 @@
 			<li><a href="#">Contact</a></li>
 		</ul>
 </div>
+<div class="layer">
+		</div>
 
 	</section>
 
