some changes to nav

--- a/dropbox_test/dropbox.html
+++ b/dropbox_test/dropbox.html
@@ -20,7 +20,7 @@
 			<nav class="desktop">
 				<ul>
 					<li><img src="assets/white_dropbox_glyph@2x.png"></li>
-					<li><a href="#">Business Home</a></li>
+					<li><a href="#"><strong>Business home</strong></a></li>
 					<li><a href="#">Overview</a></li>
 					<li><a href="#">Uses</a></li>
 					<li><a href="#">Resources</a></li>
