--- a/dropbox_test/dropbox.html
+++ b/dropbox_test/dropbox.html
@@ -5,6 +5,8 @@
 		<title>Dropbox for Business</title>
 		<link rel="stylesheet" type="text/css" href="CSS/SCSS/styles.css">
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+		<link rel="icon" type="image/png" href="assets/favicon.ico">
+		<link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<script src="dropbox.js"></script>
 	</head>
@@ -21,12 +23,12 @@
 				<ul>
 					<li><img src="assets/white_dropbox_glyph@2x.png"></li>
 					<li><a href="#"><strong>Business home</strong></a></li>
-					<li><a href="#">Overview</a></li>
-					<li><a href="#">Uses</a></li>
-					<li><a href="#">Resources</a></li>
-					<li><a href="#">Customers</a></li>
-					<li><a href="#">Pricing</a></li>
-					<li><a href="#">Contact</a></li>
+					<li><a href="https://www.dropbox.com/business/why-dropbox-for-business">Overview</a></li>
+					<li><a href="https://www.dropbox.com/business/uses">Uses</a></li>
+					<li><a href="https://www.dropbox.com/business/resources">Resources</a></li>
+					<li><a href="https://www.dropbox.com/business/customers">Customers</a></li>
+					<li><a href="https://www.dropbox.com/business/pricing">Pricing</a></li>
+					<li><a href="https://www.dropbox.com/business/contact">Contact</a></li>
 				</ul>
 			</nav>
 
@@ -100,19 +102,19 @@
 	<section id="get-your-team">
 	<h2>Get your team in sync</h2>
 	<a href="#" class=buttonTwo>Try it now</a>
-	<p>or buy for $15/user / month</p>
+	<p>or buy for $15 /user / month</p>
 		</section>
 	<footer>
 	<ul>
 	  <li class="header"><p>Business</p></li>
-	  <li><a href="#">Home</a></li>
-	  <li><a href="#">Desktop client</a></li>
-	  <li><a href="#">Mobile</a></li>
-	  <li><a href="#">Pricing</a></li>
+	  <li><a href="https://www.dropbox.com/business">Home</a></li>
+	  <li><a href="https://www.dropbox.com/install">Desktop client</a></li>
+	  <li><a href="https://www.dropbox.com/mobile">Mobile</a></li>
+	  <li><a href="https://www.dropbox.com/business/pricing">Pricing</a></li>
 	</ul>
 	<ul>
 	  <li class="header"><p>Resources</p></li>
-	  <li><a href="#">Blog</a></li>
+	  <li><a href="https://www.dropboxatwork.com/">Blog</a></li>
 	  <li><a href="#">Help</a></li>
 	  <li><a href="#">Partners</a></li>
 	  <li><a href="#">Documentation</a></li>
@@ -121,24 +123,28 @@
 	</ul>
 	<ul>
 	  <li class="header"><p>Support</p></li>
-	  <li><a href="#">Help center</a></li>
-	  <li><a href="#">Get started</a></li>
-	  <li><a href="#">Contact us</a></li>
+	  <li><a href="https://www.dropbox.com/help/category/Business">Help center</a></li>
+	  <li><a href="https://www.dropbox.com/help/category/Business">Get started</a></li>
+	  <li><a href="https://www.dropbox.com/business/contact">Contact us</a></li>
 	</ul>
 	<ul>
 	  <li class="header"><p>Community</p></li>
-	  <li><a href="#">Developers</a></li>
-	  <li><a href="#">Referrals</a></li>
-	  <li><a href="#">Integrations</a></li>
+	  <li><a href="https://www.dropbox.com/developers">Developers</a></li>
+	  <li><a href="https://www.dropbox.com/referrals">Referrals</a></li>
+	  <li><a href="https://www.dropbox.com/business/resources/app-integrations">Integrations</a></li>
 	</ul>
 	<ul>
 	  <li class="header"><p>Connect</p></li>
-	  <li><a href="#">Twitter</a></li>
-	  <li><a href="#">Facebook</a></li>
-	  <li><a href="#">Google+</a></li>
-	  <li><a href="#">Youtube</a></li>
-	  <li><a href="#">Blogs</a></li>
+	  <li><a href="https://twitter.com/dropboxatwork">Twitter</a></li>
+	  <li><a href="https://www.facebook.com/Dropbox">Facebook</a></li>
+	  <li><a href="https://plus.google.com/+Dropbox/posts">Google+</a></li>
+	  <li><a href="https://www.youtube.com/user/dropbox">Youtube</a></li>
+	  <li><a href="https://www.dropboxatwork.com/">Blogs</a></li>
 	</ul>
+
+<div id="language">
+	<a href="#"><p>English</p></a>
+</div>
 </footer>
 
 </body>
