--- a/home.html
+++ b/home.html
@@ -4,9 +4,8 @@
 		<meta charset="utf-8">
 		<title>Emily Plummer</title>
 		<link rel="stylesheet" href="font-awesome-4.2.0/css/font-awesome.min.css">
-		<link href='http://fonts.googleapis.com/css?family=Merriweather+Sans' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" type="text/css" href="style.css">
-		<link rel="stylesheet" href="home.css" type="text/css" charset="utf-8" />
+    <link href='http://fonts.googleapis.com/css?family=Oswald:400,700,300|Open+Sans+Condensed:300|Megrim' rel='stylesheet' type='text/css'>
+		<link rel="stylesheet" href="version-two/home.css" type="text/css" charset="utf-8" />
 		<link rel="shortcut icon" type="image/png" href="favicon.png"/>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<script>
@@ -39,8 +38,12 @@ $(function() {
 </script>
 	</head>
 <body>
+  <div id="container">
   <header>
+    <div id="text">
     <h1>Emily Plummer</h1>
+    <p>Web Developer</p>
+  </div>
   </header>
   <div id="left">
       <h2>Web Developer</h2>
@@ -52,15 +55,13 @@ $(function() {
         <li>Javascript & jQuery</li>
         <li>Photoshop & Illustrator</li>
       </ul>
-      <p>Experience:</p>
-      <ul>
-        <li>Front End Developer Intern</li>
-        <li> 2 Years eCommerce Marketing experience</li>
-      </ul>
     </div>
     <div id="right">
-      <h2>Work Examples</li>
+      <h2>Experience</h2>
+      <img src="experts.jpg" alt="experts-exchange">
+      <img src="barkercreek.png" alt="barker creek">
+      <img src="shopatron.png" alt="shopatron">
     </div>
-
+</div>
 </body>
 </html>
