changed file locations

--- a/version-two/home.html
+++ b/version-two/home.html
@@ -6,7 +6,7 @@
 		<title>Emily Plummer</title>
 		<link rel="stylesheet" href="font-awesome-4.2.0/css/font-awesome.min.css">
     <link href='http://fonts.googleapis.com/css?family=Oswald:400,700,300|Open+Sans+Condensed:300|Megrim' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" href="home.css" type="text/css" charset="utf-8" />
+		<link rel="stylesheet" href="version-two/home.css" type="text/css" charset="utf-8" />
 		<link rel="shortcut icon" type="image/png" href="favicon.png"/>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<script>
