--- a/version-two/home.html
+++ b/version-two/home.html
@@ -47,7 +47,6 @@ $(function() {
   </div>
   </header>
   <div id="left">
-      <h2>Web Developer</h2>
       <p>Skills:</p>
       <ul>
         <li>HTML5 & CSS3</li>
@@ -59,9 +58,46 @@ $(function() {
     </div>
     <div id="right">
       <h2>Experience</h2>
+      <div id="e-e">
       <img src="experts.jpg" alt="experts-exchange">
-      <img src="barkercreek.png" alt="barker creek">
-      <img src="shopatron.png" alt="shopatron">
+      <p class="title"><strong>Experts Exchange</strong></p>
+      <p class="date">September 2014 - Present</p>
+      <p class="sub-sub-headline">Front End Developer Intern</p>
+      <ul class="experience-work">
+        <li>Develop and edit pages through internally created CMS</li>
+        <li>Fix bugs</li>
+<li>Audit site for responsive issues</li>
+<li>Develop site wide experiences to aid in conversion</li>
+<li>Create experiments in Optimizely</li>
+        <li>Create landing pages and email templates in Marketo</li>
+      </ul>
+    </div>
+    <div id="barker">
+      <img src="barkercreek.png" alt="barker creek" class="bc">
+      <p class="title"><strong>Barker Creek Publishing</strong></p>
+      <p class="date">April 2010 - August 2014 (intermittent summers)</p>
+      <p class="sub-sub-headline">Marketing Representative & Web Developer</p>
+      <ul class="experience-work">
+        <li>Developed and styled <a href="http://stores.ebay.com/barkercreekpublishing/">custom eBay store</a></li>
+        <li>Managed multiple eCommerce channels (Online Store, Amazon, eBay)</li>
+        <li>Organized online marketing campaigns through the use of blogs, email, PPC, and social media</li>
+        <li>Analyzed site health using Google Analytics and Google Webmaster Tools</li>
+        <li>Trained employees to continue marketing efforts during the school year</li>
+      </ul>
+    </div>
+    <div id="shopatron">
+      <img src="shopatron.png" alt="shopatron" class="shp">
+        <p class="title"><strong>Shopatron</strong></p>
+      <p class="date">August 2013 - April 2014</p>
+      <p class="sub-sub-headline">Online Marketing Associate</p>
+      <ul class="experience-work">
+        <li>Managed several large brands’ online presence to drive traffic & sales to online store while building brand awareness using data driven techniques</li>
+        <li>Made technical SEO fixes such as meta data optimization, UX optimization, and implementing internal linking structures</li>
+        <li>Performed SEO & Brand Audits for clients</li>
+        <li>Restructured and refined a $20,000/day budget campaign in Google AdWords</li>
+        <li>Built custom reports using Google Analytics</li>
+      </ul>
+    </div>
     </div>
 </div>
 </body>
