--- a/version-two/home.html
+++ b/version-two/home.html
@@ -39,7 +39,7 @@ $(function() {
 </script>
 	</head>
 <body>
-  <div id="container">
+  <div id="container" class="clearfix">
   <header>
     <div id="text">
     <h1>Emily Plummer</h1>
@@ -100,5 +100,9 @@ $(function() {
     </div>
     </div>
 </div>
+<footer>
+    <p>Emily Plummer &copy; 2014</p>
+</footer>
+
 </body>
 </html>
