--- a/version-two/home.html
+++ b/version-two/home.html
@@ -47,19 +47,9 @@ $(function() {
     <p>Web Developer</p>
   </div>
   </header>
-  <div id="left">
-      <p>Skills:</p>
-      <ul>
-        <li>HTML5 & CSS3</li>
-        <li>Experience with SASS</li>
-        <li>Git & SVN</li>
-        <li>Javascript & jQuery</li>
-        <li>Photoshop & Illustrator</li>
-      </ul>
-    </div>
-    <div id="right">
+    <div id="right" class="clearfix">
       <h2>Experience</h2>
-      <span id="experience-wrap">
+      <div id="experience-wrap">
       <div id="e-e">
       <img src="experts.jpg" alt="experts-exchange">
       <p class="title"><strong>Experts Exchange</strong></p>
@@ -100,12 +90,23 @@ $(function() {
         <li>Built custom reports using Google Analytics</li>
       </ul>
     </div>
-  </span>
 </div>
+</div>
+<div id="left">
+      <h2>Skillset</h2>
+      <ul>
+        <li>HTML5 & CSS3</li>
+        <li>Experience with SASS</li>
+        <li>Git & SVN</li>
+        <li>Javascript & jQuery</li>
+        <li>Photoshop & Illustrator</li>
+      </ul>
+    </div>
 </div>
 <footer>
     <p>Emily Plummer &copy; 2014</p>
 </footer>
+
 
 </body>
 </html>
