--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ $(function() {
       <h2>Skillset</h2>
       <ul>
         <li>HTML5 & CSS3</li>
-        <li>Experience with SASS</li>
+        <li>SASS</li>
         <li>Git & SVN</li>
         <li>Javascript & jQuery</li>
         <li>Photoshop & Illustrator</li>
