30 min css haxxxx

--- a/index.html
+++ b/index.html
@@ -102,6 +102,21 @@ $(function() {
         <li>Photoshop & Illustrator</li>
       </ul>
     </div>
+     <div id="examples">
+      <h2>30 Min In Browser CSS Redesigns</h2>
+      <p>I take a website, 30 minutes, & Chrome Dev tools and I revamp websites for fun.</p>
+      <h2>Barker Creek</h2>
+       <div id="after">
+        <h2>After</h2>
+        <img src="version-two/bc-after2.png" class="after">
+        <img src="version-two/bc-after2.png" class="full-size-after">
+      </div>
+        <div id="before">
+        <h2>Before</h2>
+        <img src="version-two/bc-before.png" class="before">
+        <img src="version-two/bc-before.png" class="full-size-before">
+      </div>
+    </div>
 </div>
 <footer>
     <p>Emily Plummer &copy; 2014</p>
