--- a/version-two/home.html
+++ b/version-two/home.html
@@ -102,7 +102,21 @@ $(function() {
         <li>Photoshop & Illustrator</li>
       </ul>
     </div>
+
+    <div id="examples">
+      <h2>30 Min In Browser CSS Redesigns</h2>
+      <p>I take a website, 30 minutes, and Chrome Dev tools and revamp websites for fun.</p>
+      <ul>
+        <li>Barker Creek</li>
+        <img src="version-two/bc-before.png" class="before">
+        <img src="version-two/bc-after.png" class="after">
+      </ul>
+    </div>
 </div>
+</div>
+
+
+
 <footer>
     <p>Emily Plummer &copy; 2014</p>
 </footer>
