added contact section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta charset="utf-8">
 		<title>Emily Plummer</title>
 		<link rel="stylesheet" href="font-awesome-4.2.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="font-awesome-4.2.0/css/font-awesome.min.css">
     <link href='http://fonts.googleapis.com/css?family=Oswald:400,700,300|Open+Sans+Condensed:300|Megrim' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="version-two/home.css" type="text/css" charset="utf-8" />
 		<link rel="shortcut icon" type="image/png" href="favicon.png"/>
@@ -47,7 +48,7 @@ $(function() {
     <p>Web Developer</p>
   </div>
   </header>
-    <div id="right" class="clearfix">
+    <div id="experience" class="clearfix">
       <h2>Experience</h2>
       <div id="experience-wrap">
       <div id="e-e">
@@ -92,7 +93,7 @@ $(function() {
     </div>
 </div>
 </div>
-<div id="left">
+<div id="skills">
       <h2>Skillset</h2>
       <ul>
         <li>HTML5 & CSS3</li>
@@ -105,19 +106,30 @@ $(function() {
      <div id="examples">
       <h2>30 Min In Browser CSS Redesigns</h2>
       <p>I take a website, 30 minutes, & Chrome Dev tools and I revamp websites for fun.</p>
-      <h2>Barker Creek</h2>
+      <h3>Barker Creek</h3>
        <div id="after">
-        <h2>After</h2>
+        <h3>After</h3>
         <img src="version-two/bc-after2.png" class="after">
         <img src="version-two/bc-after2.png" class="full-size-after">
       </div>
         <div id="before">
-        <h2>Before</h2>
+        <h3>Before</h3>
         <img src="version-two/bc-before.png" class="before">
         <img src="version-two/bc-before.png" class="full-size-before">
       </div>
+
+        <div id="contact">
+    <h2>Contact</h2>
+    <ul class="fa-ul contact">
+    
+    <li><i class="fa-li fa fa-envelope"></i><a href="mailto:eplummer26@gmail.com" target="_top">eplummer26@gmail.com</a></li>
+    <li><i class="fa-li fa fa-twitter"></i><a href="http://www.twitter.com/eplummer26" class="bottom-links">@eplummer26</a></li>
+    <li><i class="fa-li fa fa-linkedin"></i><a href="http://www.linkedin.com/in/eplummer26" class="bottom-links">www.linkedin.com/in/eplummer26</a></li>
+   </ul>
+  </div>
     </div>
-</div>
+
+
 <footer>
     <p>Emily Plummer &copy; 2014</p>
 </footer>
