--- a/version-two/home.html
+++ b/version-two/home.html
@@ -53,7 +53,7 @@ $(function() {
       <div id="e-e">
       <img src="experts.jpg" alt="experts-exchange">
       <p class="title"><strong>Experts Exchange</strong></p>
-      <p class="date">September 2014 - Present</p>
+      <p class="date">September 2014 - December 2014</p>
       <p class="sub-sub-headline">Front End Developer Intern</p>
       <button class="drop-button drop-button-1">More Details</button>
       <ul class="experience-work experience-work-1">
