fixed dates, took out redesigns

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ $(function() {
       <div id="e-e">
       <img src="version-two/experts.jpg" alt="experts-exchange">
       <p class="title"><strong>Experts Exchange</strong></p>
-      <p class="date">September 2014 - Present</p>
+      <p class="date">September 2014 - December 2014</p>
       <p class="sub-sub-headline">Front End Developer Intern</p>
       <button class="drop-button drop-button-1">More Details</button>
       <ul class="experience-work experience-work-1">
@@ -105,21 +105,7 @@ $(function() {
 </div>
 </div>
 
-     <div id="examples">
-      <h2>30 Min In Browser CSS Redesigns</h2>
-      <p>I take a website, 30 minutes, & Chrome Dev tools and I revamp websites for fun.</p>
-      <h3>Barker Creek</h3>
-       <div id="after">
-        <h3>After</h3>
-        <img src="version-two/bc-after2.png" class="after">
-        <img src="version-two/bc-after2.png" class="full-size-after">
-      </div>
-        <div id="before">
-        <h3>Before</h3>
-        <img src="version-two/bc-before.png" class="before">
-        <img src="version-two/bc-before.png" class="full-size-before">
-      </div>
-    </div>
+
     <div id="contact">
     <h2>Contact</h2>
     <ul class="fa-ul contact">
