--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<html lang="en">
 		<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Emily Plummer</title>
 		<link rel="stylesheet" href="font-awesome-4.2.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="font-awesome-4.2.0/css/font-awesome.min.css">
