past tense yoooo

--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@ $(function() {
       <p class="sub-sub-headline">Front End Developer Intern</p>
       <button class="drop-button drop-button-1">More Details</button>
       <ul class="experience-work experience-work-1">
-        <li>Develop and edit pages through internally created CMS</li>
-        <li>Fix bugs</li>
-<li>Audit site for responsive issues</li>
-<li>Develop site wide experiences to aid in conversion</li>
-<li>Create experiments in Optimizely</li>
-        <li>Create landing pages and email templates in Marketo</li>
+        <li>Developed and edited pages through internally created CMS</li>
+        <li>Fixed bugs</li>
+<li>Audited site for responsive issues</li>
+<li>Developed site wide experiences to aid in conversion</li>
+<li>Created experiments in Optimizely</li>
+        <li>Created landing pages and email templates in Marketo</li>
       </ul>
     </div>
     <div id="barker">
